Test Sandbox Project/src/objects/Spike_Ticket_Counter__c.object
<CustomObject>
    <fields>
        <fullName>Category_1__c</fullName>
        <label>Category 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_2__c</fullName>
        <label>Category 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_3__c</fullName>
        <label>Category 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Composite_Category__c</fullName>
        <formula>TRIM(BLANKVALUE(Category_1__c,&apos;&apos;) &amp; &apos;-&apos; &amp; BLANKVALUE(Category_2__c,&apos;&apos;) &amp; &apos;-&apos; &amp; BLANKVALUE(Category_3__c,&apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Composite Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Notified_Last_Hour_Same_Day__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Notified: Last Hour Same Day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Notified_Same_Hour_Previous_Day__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Notified: Same Hour Previous Day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Hour_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Last Hour Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Hour_Same_Day_Threshold_Crossed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Last Hour Same Day Threshold Crossed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Same_Hour_Previous_Day_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Same Hour Previous Day Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Same_Hour_Previous_Day_Growth__c</fullName>
        <formula>IF(OR(ISNULL(Same_Hour_Previous_Day_Count__c), Same_Hour_Previous_Day_Count__c == 0), 0, ((NULLVALUE(This_Hour_Count__c, 0) - NULLVALUE(Same_Hour_Previous_Day_Count__c, 0)) / NULLVALUE(Same_Hour_Previous_Day_Count__c, 0))*100)</formula>
        <label>Same Hour Previous Day Growth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Same_Hour_Previous_Day_Threshold_Crossed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same Hour Previous Day Threshold Crossed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>This_Hour_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>This Hour Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>This_Hour_Growth__c</fullName>
        <formula>IF(OR(ISNULL(Last_Hour_Count__c), Last_Hour_Count__c == 0), 0, ((NULLVALUE(This_Hour_Count__c, 0) - NULLVALUE(Last_Hour_Count__c, 0)) / NULLVALUE(Last_Hour_Count__c, 0))*100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>This Hour Growth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Spike Ticket Counter</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Category_1__c</columns>
        <columns>Category_2__c</columns>
        <columns>Category_3__c</columns>
        <columns>Composite_Category__c</columns>
        <columns>Is_Notified_Last_Hour_Same_Day__c</columns>
        <columns>Is_Notified_Same_Hour_Previous_Day__c</columns>
        <columns>Last_Hour_Count__c</columns>
        <columns>Last_Hour_Same_Day_Threshold_Crossed__c</columns>
        <columns>Same_Hour_Previous_Day_Count__c</columns>
        <columns>Same_Hour_Previous_Day_Growth__c</columns>
        <columns>Same_Hour_Previous_Day_Threshold_Crossed__c</columns>
        <columns>This_Hour_Count__c</columns>
        <columns>This_Hour_Growth__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>STC-{0000}</displayFormat>
        <label>Spike Ticket Counter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Spike Ticket Counters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>